# DataCollectDAG

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.bash
demo/: xtreme1_demo.yaml
demo/calibration/: sa1_cali.json
demo/models/: README.md
docs/: architecture.md  requirements.md
src/data_collect_dag/: __main__.py  app.py  cache.py  cli.py  config.py  control.py  dag.py  io_utils.py  logging_utils.py  metrics.py  models.py  ros_adapter.py  ros_env.py  ros_messages.py  sample_context.py  session.py  status.py  summary.py  transforms.py
src/data_collect_dag/nodes/: __init__.py  base.py  common.py  vision.py  xtreme1.py
tests/functional/: test_session_and_cli.py
tests/unit/: conftest.py  test_aggregate_pointclouds_node.py  test_cache.py  test_config.py  test_control_queue.py  test_module_entrypoint.py  test_multi_time_sync_node.py  test_pointcloud_motion_compensation_node.py  test_pointcloud_radius_crop_node.py  test_pointcloud_roi_crop_node.py  test_pointcloud_transform_node.py  test_ros_adapter.py  test_ros_env.py  test_ros_messages.py  test_sample_context.py  test_session_runtime.py  test_start_end_node.py  test_status_summary.py  test_time_sync_node.py  test_transforms.py  test_xtreme1_save_node.py  test_yolo_person_gate_node.py
