[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-collect-dag"
version = "0.1.0"
description = "ROS1-oriented data collection DAG demo runtime"
readme = "docs/requirements.md"
requires-python = ">=3.8,<3.9"
dependencies = [
  "numpy>=1.23,<2",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "opencv-python-headless>=4.10",
  "ultralytics>=8.4,<9",
  "rospkg>=1.6",
  "catkin_pkg>=1.1",
  "pycryptodomex>=3.20",
  "python-gnupg>=0.5",
]

[project.scripts]
data_collect_dag = "data_collect_dag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
