[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-collect-dag"
version = "0.1.0"
description = "ROS1-oriented data collection DAG demo runtime"
readme = "docs/requirements.md"
requires-python = ">=3.8,<3.9"

[project.scripts]
data_collect_dag = "data_collect_dag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
